--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 .cont{
   background-color: transparent;
-  width: 500px;
-  height: 500px;
+  width: auto;
+  height: 80vh;
+  max-height: 400px;
   perspective: 1000px;
 }
-.card{
+.card1{   /*this class rename from card to card1 beacuse interferance with bootstrap class card*/
   width: 100%;
   height: 100%;
   transition: transform .9s;
@@ -30,10 +31,8 @@
   transform: rotateY(180deg);
 }
 
-.mori-shadow{
-  box-shadow: inset 3px 3px 4px black;
-  border-radius: 50%;
-}
+
+
 
 
 .mori-gradient1{      /*https://uigradients.com/#Venice*/
@@ -51,4 +50,22 @@ background: linear-gradient(to top, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Fir
   background: #9CECFB;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to bottom, #0052D4, #65C7F7, #9CECFB);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to bottom, #0052D4, #65C7F7, #9CECFB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+
+
+body {
+font-size: 6vw;
+}
+
+@media screen and (min-width: 400px) {
+  body {
+    font-size: 4vw;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  body {
+    font-size: 2vw;
+  }
 }
